
[workspace]
resolver = "2"
members =   [ "core"
            , "base"
            , "game"
            , "editor"
            , "derive_macros"
            , "derive_macros_helpers"
            ]


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]

derive_macros = {path = "./derive_macros"}
derive_macros_helpers = {path = "./derive_macros_helpers"}
env_logger = "0.10.2"
find_folder = "0.3.0"
learning_conrod_core = {path="./core"}
learning_conrod_editor = {path="./editor"}
learning_conrod_game = {path="./game"}
log = "0.4.22"
nannou = "0.18.1"
nannou_egui = "0.5.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
ron= "0.8.1"
serde = { version = "1.0.216", features = ["derive"] }
syn = "2.0.92"
