
[workspace]
resolver = "2"
members = [
    "core",
    "base",
    "game",
    "editor",
    "derive_macros",
    "derive_macros_helpers",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]

derive_macros = { path = "./derive_macros" }
derive_macros_helpers = { path = "./derive_macros_helpers" }
env_logger = "0.11.8"
find_folder = "0.3.0"
learning_conrod_core = { path = "./core" }
learning_conrod_editor = { path = "./editor" }
learning_conrod_game = { path = "./game" }
log = "0.4.28"
nannou = "0.19.0"
nannou_egui = "0.19.0"
proc-macro2 = "1.0.101"
quote = "1.0.40"
ron = "0.8.1"
serde = { version = "1.0.223", features = ["derive"] }
syn = "2.0.106"
