[package]
name = "learning_conrod"
version = "0.1.0"
authors = ["BB20101997 <bb-github@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
learning_conrod_editor = {path="../editor"}
learning_conrod_game = {path="../game"}
learning_conrod_core = {path="../core"}
conrod_core = "0.76.1"
conrod_piston = "0.76.1"
piston_window = { version = "0.120.0" , features = ["glutin"]}
piston2d-opengl_graphics = "0.78.0"
glutin = "0.26.0"
log = "0.4.17"
env_logger = "0.9.1"
