[package]
name = "learning_conrod"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
learning_conrod_core = { workspace = true }
learning_conrod_editor = { workspace = true }
learning_conrod_game = { workspace = true }
log = { workspace = true }
nannou = {workspace = true }
nannou_egui = {workspace = true }
