[package]
name = "learning_conrod_core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_macros_helpers = { workspace = true }
find_folder = { workspace = true }
log = { workspace = true }
ron = { workspace = true }

nannou = { workspace = true }
nannou_egui = { workspace = true }

[lib]
