[package]
name = "learning_conrod_editor"
version = "0.1.0"
authors = ["BB20101997 <bb-github@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
derive_macros = {path="../derive_macros"}
derive_macros_helpers = {path="../derive_macros_helpers"}
learning_conrod_core = {path="../core"}
learning_conrod_game = {path="../game"}
conrod_core = "0.76.1"
piston_window = { version = "0.120.0" , features = ["glutin"]}
piston2d-opengl_graphics = "0.82.0"
