[package]
name = "learning_conrod_editor"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
conrod_core = { workspace = true }
derive_macros = { workspace = true }
derive_macros_helpers = { workspace = true }
learning_conrod_core = { workspace = true }
learning_conrod_game = { workspace = true }
piston_window = { workspace = true }
piston2d-opengl_graphics = { workspace = true }
