[package]
name = "learning_conrod_editor"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
derive_macros = { workspace = true }
derive_macros_helpers = { workspace = true }
learning_conrod_core = { workspace = true }
learning_conrod_game = { workspace = true }

nannou = { workspace = true }
nannou_egui = { workspace = true }
