[package]
name = "learning_conrod_game"
version = "0.1.0"
authors = ["BB20101997 <bb-github@t-online.de>"]
edition = "2018"

[lib]

[dependencies]
derive_macros = {path="../derive_macros"}
derive_macros_helpers = {path="../derive_macros_helpers"}
learning_conrod_core = {path="../core"}
conrod_core = "0.76.1"
conrod_piston = "0.76.1"
piston_window = { version = "0.120.0" , features = ["glutin"]}
piston2d-opengl_graphics = "0.78.0"
serde = { version = "1.0.157", features = ["derive"] }
ron= "0.8.0"
log = "0.4.17"
