[package]
name = "learning_conrod_game"
version = { workspace = true }
edition = { workspace = true }

[lib]

[dependencies]
conrod_core = { workspace = true }
conrod_piston = { workspace = true }
derive_macros = { workspace = true }
derive_macros_helpers = { workspace = true }
learning_conrod_core = { workspace = true }
log = { workspace = true }
piston_window = { workspace = true }
piston2d-opengl_graphics = { workspace = true }
ron= { workspace = true }
serde = { workspace = true }
