[package]
name = "learning_conrod_game"
version = { workspace = true }
edition = { workspace = true }

[lib]

[dependencies]
derive_macros = { workspace = true }
derive_macros_helpers = { workspace = true }
learning_conrod_core = { workspace = true }
log = { workspace = true }
ron= { workspace = true }
serde = { workspace = true }

nannou = {workspace = true }
nannou_egui = {workspace = true }
